[package]
name = "rudos"
version = "0.1.0"
edition = "2021"

# Needs to be disabled for tests to work: https://github.com/rust-lang/cargo/issues/7359
# [profile.dev]
# panic = "abort"

[profile.release]
panic = "abort"

# For testing with QEMU
[package.metadata.bootimage]
test-args = [
    "-device",
    "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial",
    "stdio",
    "-display",
    "none",
]
test-success-exit-code = 33 # (0x10 << 1) | 1

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false

[dependencies]
# TODO: Maybe figure out how to upgrade to newer version
bootloader = { version = "0.9.23", features = ["map_physical_memory"] }
volatile = "0.2.6"
lazy_static = { version = "1.0", features = ["spin_no_std"] }
spin = "0.5.2"
x86_64 = "0.14.10"
uart_16550 = "0.3.0"
pic8259 = "0.10.1"
pc-keyboard = "0.5.0"
